/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package Classes;

/**
 *
 * @author Universidade
 */
public class Manager {
    
    private String name;
    private String email;
    private String password;
    
    public Manager (String name,String email,String password ){
        this.name = name;
        this.email = email;
        this.password = email;
    }
}
